--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@
     margin: 5px;
 }
 
+/* *** box top *** */
+
 .box-top {
     position: relative;
 }
@@ -43,6 +45,37 @@
     display: inline-block;
 }
 
+.box-top .heart {
+    font-size: 20px;
+    background-color: #fff;
+    padding: 5px 10px;
+    position: absolute;
+    top: 20px;
+    right: 0;
+}
+
+.box-top .infos {
+    color: white;
+    font-size: 14px;
+    position: absolute;
+    left: 0;
+    bottom: 20px;
+}
+
+.infos span {
+    padding: 2px 5px;
+}
+
+.infos .discount {
+    background-color: #EB0037;
+}
+
+.infos .sustainability {
+    background-color: #00875a;
+}
+
+/* *** box bottom *** */
+
 .box-bottom {
     margin-top: 10px;
 }
@@ -63,6 +96,10 @@
     background-color: blue;
     height: 500px;
 }
+
+/* .debug .box-top .infos {
+    background-color: red;
+} */
 
 .debug .box-bottom {
     background-color: yellow;
