--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .container {
-    width: 70%;
+    width: 80%;
     margin: auto;
 }
 
@@ -25,12 +25,13 @@ body {
 /* *** box top *** */
 
 .box-top {
+    height: 500px;
     position: relative;
 }
 
 .box-top img {
-    width: 100%;
     height: 500px;
+    width: 100%;
     object-fit: cover;
 }
 
@@ -85,6 +86,25 @@ body {
     margin-top: 10px;
 }
 
+.box-bottom > span {
+    font-size: 14px;
+}
+
+.box-bottom h3 {
+    font-size: 18px;
+    text-transform: uppercase;
+}
+
+.box-bottom .price {
+    color: #EB0037;
+    font-weight: bold;
+}
+
+.box-bottom .old-price {
+    text-decoration: line-through;
+}
+
+
 /* +++++ debug +++++ */
 
 .debug.container {
@@ -99,12 +119,11 @@ body {
 
 .debug .box-top {
     background-color: blue;
-    height: 500px;
 }
 
-/* .debug .box-top .infos {
+.debug .box-top .infos {
     background-color: red;
-} */
+}
 
 .debug .box-bottom {
     background-color: yellow;
