--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,18 @@ body {
     margin: auto;
 }
 
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
 /* ***** main ***** */
 
 .box {
-    width: calc(100% / 3 - 10px);
-    margin: 5px;
+    width: calc(100% / 3 - 20px);
+    margin: 10px;
+    float: left;
 }
 
 /* *** box top *** */
