--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 
 .container {
     width: 80%;
-    margin: auto;
+    margin: 20px auto;
 }
 
 .clearfix::after {
@@ -25,7 +25,7 @@ body {
 
 .box {
     width: calc(100% / 3 - 20px);
-    margin: 10px;
+    margin: 20px 10px;
     float: left;
 }
 
@@ -115,7 +115,6 @@ body {
 /* +++++ debug +++++ */
 
 .debug.container {
-    height: 1000px;
     background-color: lightgrey;
 }
 
@@ -134,5 +133,5 @@ body {
 
 .debug .box-bottom {
     background-color: yellow;
-    height: 50px;
+    height: 60px;
 }
